Update opti_loes.tex, opti_loes2.tex, and 3 more files...

--- a/fig/tikz/optimering/opti_loes.tex
+++ b/fig/tikz/optimering/opti_loes.tex
@@ -43,9 +43,9 @@
 \addplot[domain=0:6, samples=2, color=black, dotted, thick]{4-x};
 \addplot[mark=*] coordinates {(2,2)};
 \end{axis}
+\draw[->] (1.4,1.2) -- (2.75,2.35);
 \end{tikzpicture}
-\caption{Grafisk løsning til problemet i \ref{eks:min_loes}.}
+\caption{Grafisk illustration med én entydig løsning til problemet i \ref{eks:min_loes}.}
 %
-\label{fig:min_loes}
+\label{fig:opti_loes}
 \end{figure}
-
