--- a/fig/tikz/optimering/opti_loes2.tex
+++ b/fig/tikz/optimering/opti_loes2.tex
@@ -35,10 +35,10 @@
 \addplot[domain=-1:6, samples=2, color=black, dotted, thick]{-x};
 \addplot[domain=-1:6, samples=2, color=black, dotted, thick]{2-x};
 \addplot[domain=0:6, samples=2, color=black, dotted, ultra thick]{4-x};
-\addplot[mark=*] coordinates {(2,2)};
 \end{axis}
+\draw[->] (1.4,1.2) -- (2.75,2.35);
 \end{tikzpicture}
 \caption{Grafisk illustration med uendeligt antal løsninger til problemet i \ref{eks:min_loes}.}
 %
-\label{fig:min_loes}
+\label{fig:opti_loes2}
 \end{figure}
