--- a/fig/tikz/optimering/opti_loes3.tex
+++ b/fig/tikz/optimering/opti_loes3.tex
@@ -20,19 +20,16 @@
   ymax=4]
 	legend style={at={(0.45,0.025)},anchor=south west},
 ]
-\addplot[name path=c, domain=0:3,samples=2,color=black, style=very thin]{0};
+\addplot[name path=d, domain=0:4,samples=2,color=white, style=ultra thin]{4};
+\addplot[name path=c, domain=0:4,samples=2,color=black, style=ultra thin]{0};
 %%%
 %%%
-\addplot[name path=b, domain={0:6}, color=myblue, style=very thick,samples=2]{6-2*x};
-\addlegendentry{$2x_1+x_2 \leq 6$}
-\addplot[name path=a, domain={0:6}, color=myred, style=very thick, samples=2]{3-0.5*x};
-\addlegendentry{$x_1+2x_2 \leq 6$}
-
-
+\addplot[name path=b, domain={0:6}, color=myblue, style=very thick,samples=2]{3-1*x};
+\addplot[name path=a, domain={0:6}, color=myred, style=very thick, samples=2]{2-1*x};
 
 
 \addplot[fill=myblue!15,opacity=0.4] fill between [of=a and c, soft clip={domain=0:2}];
-\addplot[fill=myblue!15,opacity=0.4] fill between [of=b and c, soft clip={domain=2:3}];
+\addplot[fill=myblue!15,opacity=0.4] fill between [of=b and d, soft clip={domain=0:4}];
  
 
 %
@@ -41,11 +38,10 @@
 \addplot[domain=-1:6, samples=2, color=black, dotted, thick]{-x};
 \addplot[domain=-1:6, samples=2, color=black, dotted, thick]{2-x};
 \addplot[domain=0:6, samples=2, color=black, dotted, thick]{4-x};
-\addplot[mark=*] coordinates {(2,2)};
 \end{axis}
+\draw[->] (1.4,1.2) -- (2.75,2.35);
 \end{tikzpicture}
-\caption{Grafisk løsning til problemet i \ref{eks:min_loes}.}
+\caption{Grafisk illustration, hvor løsningsmængden er tom til problemet i \ref{eks:min_loes}.}
 %
-\label{fig:min_loes}
+\label{fig:opti_loes3}
 \end{figure}
-
