--- a/fig/tikz/geometri/hyperplan_r3.tex
+++ b/fig/tikz/geometri/hyperplan_r3.tex
@@ -45,6 +45,6 @@
 \draw[thick] (0,0,0) -- (0,0,-0.3);
 % 
 \end{tikzpicture}
-  \captionof{figure}{Et hyperplan $\mathbf{a}^T \mathbf{x} = b$ i $\R^3$ og det øvre halvrum $\mathbf{a}^T \mathbf{x} > b$ og det nedre halvrum $\mathbf{a}^T \mathbf{x} < b$.}
+  \captionof{figure}{Et hyperplan $\mathbf{a}^T \mathbf{x} = b$ i $\R^3$, det øvre halvrum $\mathbf{a}^T \mathbf{x} > b$ og det nedre halvrum $\mathbf{a}^T \mathbf{x} < b$.}
   \label{fig:nej6}
 \end{center}
