--- a/fig/tikz/geometri/konveks_eks_r3.tex
+++ b/fig/tikz/geometri/konveks_eks_r3.tex
@@ -44,7 +44,7 @@
 %%
 %
 \end{tikzpicture}
-  \captionof{figure}{Vektorerne $\mathbf{x}$, $ \mathbf{y}$ og $ \mathbf{z}$, og den konvekse hylster af vektorerne, der er markeret med blå.}
+  \captionof{figure}{Vektorerne $\mathbf{x}$, $ \mathbf{y}$ og $ \mathbf{z}$, og det konvekse hylster af vektorerne, der er markeret med blå.}
   \label{fig:neeej}
 \end{center}
 %
