--- a/incl/main/grafisk_losning/Hyperplan_halvrum_polyeder.tex
+++ b/incl/main/grafisk_losning/Hyperplan_halvrum_polyeder.tex
@@ -15,7 +15,7 @@ Det gælder endvidere, at en mængde af formen $ \{x \in \R^n \mid A\textbf{x}=b
 % Eventuelt med et eksempel 
 %lidt forskellige muligheder her, enten kan det relateres til simplex eller blive introduceret her
 %
-Betragt eksempel \ref{eks:min_lin}. Polyeden er det blå område på figur \ref{fig:min_beg}. 
+Betragt \ref{eks:min_lin}. Polyeden er det blå område på figur \ref{fig:min_beg}. 
 Ligeledes ses på figur \ref{fig:nej2} en polyede $\mathcal{P}$, der er markeret med blå i $\R^2$. 
 På figur \ref{fig:nej3} ses en polyede $\mathcal{P}$, markeret med blå i $\R^3$. 
 %
