--- a/incl/main/grafisk_losning/poly_std_form.tex
+++ b/incl/main/grafisk_losning/poly_std_form.tex
@@ -1,15 +1,15 @@
 \section{Polyeder på standardform}
 \label{afsnit:fisk}
 %
-Som det bliver beskrevet i afsnit \ref{sec:standard} kan optimeringsproblemer opskrives på standardform.
-Dette korosponderer med polyeder der ligeledes kan opskrives på standardform: 
+Som beskrevet i afsnit \ref{sec:standard}, kan optimeringsproblemer opskrives på standardform.
+Dette korresponderer med polyeder, der ligeledes kan opskrives på standardform: 
 $P=\{ \mathbf{x} \in \R^n \mid A\mathbf{x}=\mathbf{b},x \geq 0 \}$, hvor er $A$ er en $m \times n$ matrix.
-$P$ bliver er her et \textit{polyede på standardform}.
-I de fleste tilfælde er det en fordel at antage at de $m$ rækker i $A$ er lineært uafhængige.
-I sætning \ref{something something} vil det endvidere blive vist at antagelsen af at rækkerne er uafhængige kan fortages, da de svarer til overflødige betingelser som kan udelades.
-som det ses i (ref til basale mulige løsninger) skal der være $n$ aktive-begrænsninger i spil for at finde en basal mulig løsning.
+$P$ er her et \textit{polyede på standardform}.
+I de fleste tilfælde er det en fordel at antage, at de $m$ rækker i $A$ er lineært uafhængige.
+I sætning \ref{something something} vises endvidere, at antagelsen om, at rækkerne er uafhængige, kan foretages, da de svarer til overflødige betingelser, som kan udelades.
+Som det ses i (ref til basale mulige løsninger), skal der være $n$ aktive begrænsninger i spil for at finde en basal mulig løsning.
 såfremt $m \neq n$, skal der derfor vælges $n-m$ variable $x_i$ med henblik på, at sætte disse $x_i=0$, hvilket gør begrænsningerne $x_i \geq 0$ aktive.
-ovenstående 53 i bogen har behov for andre læser så vi kan diskutere hvad det betyder.
+%ovenstående 53 i bogen har behov for andre læser så vi kan diskutere hvad det betyder.
 Det er dog ikke uvæsentligt hvilke af disse variable der omdannes til $0$ hvilket belyses af sætning \ref{thm:polystd}.
 \begin{thm}{}{polystd}
 Ved begrænsningerne $A\mathbf{x}=\mathbf{b}$ og $\mathbf{x}\geq 0$.
