--- a/incl/main/linear_optimeringsproblemer/grafisk_losning.tex
+++ b/incl/main/linear_optimeringsproblemer/grafisk_losning.tex
@@ -1,4 +1,5 @@
-\section{Løsninger til lineære løsningsproblemer}
+\section{Løsninger til lineære programmeringsproblemer}
+%vil bare lige sige, at titlen før var "Løsninger til lineære løsningsproblemer", lol
 \label{heeeeejjulle}
 I forhold til grafisk at løse lignende lineære programmeringsproblemer forhenstående, så vil følgende eksempel illustrere hvordan. 
 %Mit forslag til ovenstående: Eksempel \ref{eks:min_loes} illustrerer, hvordan lineære programmeringsproblemer løses i nærværende rapport.
