--- a/fig/tikz/geometri/konveks_eks_r2.tex
+++ b/fig/tikz/geometri/konveks_eks_r2.tex
@@ -36,7 +36,7 @@
 %%
 %
 \end{tikzpicture}
-  \captionof{figure}{Vektorerne $\mathbf{x}$ og $ \mathbf{y}$, samt den konvekse kombination af dem, hvor $\lambda_x = \lambda_y = \frac{1}{2}$, og den konvekse hylster af vektorerne, der er markeret med blå.}
+  \captionof{figure}{Vektorerne $\mathbf{x}$ og $ \mathbf{y}$, samt den konvekse kombination af dem, hvor $\lambda_x = \lambda_y = \frac{1}{2}$, og det konvekse hylster af vektorerne, der er markeret med blå.}
   \label{fig:neej2}
 \end{center}
 %
