Update ekstrema.tex, hyperplan_r3.tex, and 10 more files...

--- a/fig/tikz/geometri/konveks_eks_r2.tex
+++ b/fig/tikz/geometri/konveks_eks_r2.tex
@@ -16,7 +16,7 @@
 %
 % Tegning af vektorer
 % -------------------------------------------------------
-  \draw[very thick,color=myblue](b)--(c);  
+  \draw[very thick,color=myblue!50](b)--(c);  
   \draw[thick,->](f)--(b);
   \draw[thick,->](f)--(c);
   \draw[thick,->, dashed](f)--(1.35,1.2,1.2);
