--- a/fig/tikz/optimering/opti_loes2.tex
+++ b/fig/tikz/optimering/opti_loes2.tex
@@ -38,7 +38,7 @@
 \end{axis}
 \draw[->] (1.4,1.2) -- (2.75,2.35);
 \end{tikzpicture}
-\caption{Grafisk illustration med uendeligt antal løsninger til problemet i \ref{eks:min_loes}.}
+\caption{Grafisk illustration med uendeligt antal løsninger til problemet i \ref{eks:min_loes2}.}
 %
 \label{fig:opti_loes2}
 \end{figure}
