--- a/incl/main/grafisk_losning/poly_std_form.tex
+++ b/incl/main/grafisk_losning/poly_std_form.tex
@@ -3,8 +3,8 @@
 %
 Som beskrevet i afsnit \ref{sec:standard}, kan optimeringsproblemer opskrives på standardform.
 Dette korresponderer med polyeder, der ligeledes kan opskrives på standardform: 
-$P=\{ \mathbf{x} \in \R^n \mid A\mathbf{x}=\mathbf{b},x \geq 0 \}$, hvor er $A$ er en $m \times n$ matrix.
-$P$ er her et \textit{polyede på standardform}.
+$\mathcal{P}=\{ \mathbf{x} \in \R^n \mid A\mathbf{x}=\mathbf{b},x \geq 0 \}$, hvor er $A$ er en $m \times n$ matrix.
+$\mathcal{P}$ er her et \textit{polyede på standardform}.
 I de fleste tilfælde er det en fordel at antage, at de $m$ rækker i $A$ er lineært uafhængige.
 I sætning \ref{something something} vises endvidere, at antagelsen om, at rækkerne er uafhængige, kan foretages, da de svarer til overflødige betingelser, som kan udelades.
 Som det ses i (ref til basale mulige løsninger), skal der være $n$ aktive begrænsninger i spil for at finde en basal mulig løsning.
