--- a/fig/tikz/optimering/opti_loes.tex
+++ b/fig/tikz/optimering/opti_loes.tex
@@ -12,40 +12,36 @@
   ytick={-5,-4,...,5},
   xlabel={$x_1$},
   ylabel={$x_2$},
-  xlabel style={below right},
-  ylabel style={above left},
+  xlabel style={right},
+  ylabel style={above},
   xmin=-1,
   xmax=4,
   ymin=-1,
   ymax=4]
 	legend style={at={(0.45,0.025)},anchor=south west},
 ]
-\addplot[name path=c, domain=0:3,samples=2,color=black, style=very thin]{0};
 %%%
 %%%
 \addplot[name path=b, domain={0:6}, color=myblue, style=very thick,samples=2]{6-2*x};
 \addlegendentry{$2x_1+x_2 \leq 6$}
 \addplot[name path=a, domain={0:6}, color=myred, style=very thick, samples=2]{3-0.5*x};
 \addlegendentry{$x_1+2x_2 \leq 6$}
-
-
-
-
-\addplot[fill=myblue!15,opacity=0.4] fill between [of=a and c, soft clip={domain=0:2}];
-\addplot[fill=myblue!15,opacity=0.4] fill between [of=b and c, soft clip={domain=2:3}];
- 
-
 %
-
+\addplot[name path=c, domain=0:3,samples=2,color=black, style=very thin]{0};
+%
+\addplot[fill=myblue!15] fill between [of=a and c, soft clip={domain=0:2}];
+\addplot[fill=myblue!15] fill between [of=b and c, soft clip={domain=2:3}];
+%
+%
 %	
 \addplot[domain=-1:6, samples=2, color=black, dotted, thick]{-x};
 \addplot[domain=-1:6, samples=2, color=black, dotted, thick]{2-x};
 \addplot[domain=0:6, samples=2, color=black, dotted, thick]{4-x};
 \addplot[mark=*] coordinates {(2,2)};
 \end{axis}
-\draw[->] (1.4,1.2) -- (2.75,2.35);
+\draw[thick,->] (1.4,1.2) -- (2.75,2.35) node[above right] {$\mathbf{v}$};
 \end{tikzpicture}
-\caption{Grafisk illustration med én entydig løsning til problemet i \ref{eks:min_loes}.}
+\caption{Grafisk illustration med én entydig løsning til problemet i \ref{eks:min_loes}, hvor løsningsmængden er markeret med blå.}
 %
 \label{fig:opti_loes}
 \end{figure}
