--- a/fig/tikz/optimering/opti_loes3.tex
+++ b/fig/tikz/optimering/opti_loes3.tex
@@ -24,8 +24,8 @@
 \addplot[name path=c, domain=0:4,samples=2,color=black, style=ultra thin]{0};
 %%%
 %%%
-\addplot[name path=b, domain={0:6}, color=myblue, style=very thick,samples=2]{3-1*x};
-\addplot[name path=a, domain={0:6}, color=myred, style=very thick, samples=2]{2-1*x};
+\addplot[name path=b, domain={0:3}, color=myblue, style=very thick,samples=2]{3-1*x};
+\addplot[name path=a, domain={0:2}, color=myred, style=very thick, samples=2]{2-1*x};
 
 
 \addplot[fill=myblue!15,opacity=0.4] fill between [of=a and c, soft clip={domain=0:2}];
@@ -41,7 +41,7 @@
 \end{axis}
 \draw[->] (1.4,1.2) -- (2.75,2.35);
 \end{tikzpicture}
-\caption{Grafisk illustration, hvor løsningsmængden er tom til problemet i \ref{eks:min_loes}.}
+\caption{Grafisk illustration, hvor løsningsmængden er tom til problemet i \ref{eks:min_loes3}.}
 %
 \label{fig:opti_loes3}
 \end{figure}
