--- a/incl/main/grafisk_losning/ekstrema_punkter.tex
+++ b/incl/main/grafisk_losning/ekstrema_punkter.tex
@@ -12,9 +12,11 @@ samt en skalar $\lambda \in [0,1]$, hvorom det gælder, at $\mathbf{x}=\lambda\m
 \noindent
 %
 %
-Et hjørne kan beskrives ud fra denne definition, idet der, såfremt $\mathbf{x}=\lambda\mathbf{y}+(1-\lambda)z$, og alle vektorene findes i $P$, gælder, at $\mathbf{x}$ er en konveks kombination af $\mathbf{y}$ og $\mathbf{z}$.
-Hvis $\mathbf{x}=\lambda\mathbf{y}+(1-\lambda)\textbf{z}$ og $\mathbf{x}$ er et ekstremumspunkt, må det derfor gælde, at $\mathbf{y}\notin P$ eller $\mathbf{z}\notin P$ eller $\mathbf{x}=\mathbf{z}$ eller $\mathbf{x}=\mathbf{y}$. 
-Det skal her nævnes, at denne definition er strengt geometrisk.
+Et hjørne kan beskrives ud fra denne definition, idet der, såfremt $\mathbf{x}=\lambda\mathbf{y}+(1-\lambda) \mathbf{z}$, og alle vektorene findes i $P$, gælder, at $\mathbf{x}$ er en konveks kombination af $\mathbf{y}$ og $\mathbf{z}$.
+Hvis $\mathbf{x}=\lambda\mathbf{y}+(1-\lambda) \textbf{z}$ og $\mathbf{x}$ er et ekstremumspunkt, må det derfor gælde, at $\mathbf{y}\notin P$ eller $\mathbf{z}\notin P$ eller $\mathbf{x}=\mathbf{z}$ eller $\mathbf{x}=\mathbf{y}$. 
+Det skal her nævnes, at denne definition er strengt geometrisk. 
+% Kun gælder som geometrisk definition gælder ikke som algebrarisk definition xD
+På figur \ref{fig:ekstrema} ses en afgrænset polyede $\mathcal{P}$, hvor $\textbf{x}$ er et ekstremumspunkt, da der ikke findes vektorer $\textbf{y}$ og $\textbf{z}$ sådan at $\mathbf{x}=\lambda\mathbf{y}+(1-\lambda)z$. Vektor $\textbf{w}$ er i modsætning ikke et ekstremumspunkt, da der findes $\textbf{v}$ og $\textbf{u}$, sådan at $\mathbf{w}=\lambda\mathbf{v}+(1-\lambda)u$.
 %
 \input{fig/tikz/ekstrema}
 \\\\
@@ -22,11 +24,11 @@ Det skal her nævnes, at denne definition er strengt geometrisk.
 En alternativ geometrisk definition relaterer sig til \textit{hjørne punkter}, som er den entydige optimale løsning til et givet lineært programmeringsproblem med den mulige løsningsmængde $\mathcal{P}$.
 %
 \begin{defn}{}{hjoerner}
-Lad $P$ være en polyede. 
-En vektor $\mathbf{x}\in P$ siges at være et \textbf{hjørne punkt}, hvis der eksisterer en vektor $\mathbf{c}$, hvorom det gælder, at $\mathbf{c}^T\mathbf{x}<\mathbf{c}^T\mathbf{y}$ for alle $\mathbf{y}$, som opfylder $\mathbf{y} \in P$ samt $\mathbf{y}\neq\mathbf{x}$.
+Lad $\mathcal{P}$ være en polyede. 
+En vektor $\mathbf{x}\in \mathcal{P}$ siges at være et \textbf{hjørne punkt}, hvis der eksisterer en vektor $\mathbf{c}$, hvorom det gælder, at $\mathbf{c}^T\mathbf{x}<\mathbf{c}^T\mathbf{y}$ for alle $\mathbf{y}$, som opfylder $\mathbf{y} \in \mathcal{P}$ samt $\mathbf{y}\neq\mathbf{x}$.
 \end{defn}
 \noindent
 %
 %
-Dette kan ligeledes beskrives som, at $\mathbf{x}$ er et hjørne i $P$, såfremt $P$ er på den ene side af et hyperplan, der skærer $P$ i $\mathbf{x}$. 
+Dette kan ligeledes beskrives som, at $\mathbf{x}$ er et hjørne i $\mathcal{P}$, såfremt $\mathcal{P}$ er på den ene side af et hyperplan, der skærer $\mathcal{P}$ i $\mathbf{x}$. 
 Jævnfør definition \ref{defn:ekstrema} har dette hyperplan ligningen $y \mid \mathbf{c}^T\mathbf{x}=\mathbf{c}^T\mathbf{y}.$
