--- a/fig/tikz/optimering/opti_loes3.tex
+++ b/fig/tikz/optimering/opti_loes3.tex
@@ -20,16 +20,22 @@
   ymax=4]
 	legend style={at={(0.45,0.025)},anchor=south west},
 ]
+
+%%%
+%%%
+\addplot[name path=b, domain={0:3}, color=myblue, style=very thick,samples=2]{3-1*x};
+\addlegendentry{$x_1+x_2 \geq 3$}
+\addplot[name path=a, domain={0:2}, color=myred, style=very thick, samples=2]{2-1*x};
+\addlegendentry{$x_1+x_2 \leq 2$}
+%%%
+%%%
 \addplot[name path=d, domain=0:4,samples=2,color=white, style=ultra thin]{4};
 \addplot[name path=c, domain=0:4,samples=2,color=black, style=ultra thin]{0};
 %%%
 %%%
-\addplot[name path=b, domain={0:3}, color=myblue, style=very thick,samples=2]{3-1*x};
-\addplot[name path=a, domain={0:2}, color=myred, style=very thick, samples=2]{2-1*x};
-
-
-\addplot[fill=myblue!15,opacity=0.4] fill between [of=a and c, soft clip={domain=0:2}];
-\addplot[fill=myblue!15,opacity=0.4] fill between [of=b and d, soft clip={domain=0:4}];
+\addplot[fill=myblue!15] fill between [of=a and c, soft clip={domain=0:2}];
+\addplot[fill=myblue!15] fill between [of=b and d, soft clip={domain=0:3}];
+\addplot[fill=myblue!15] fill between [of=c and d, soft clip={domain=3:4}];
  
 
 %
@@ -39,9 +45,9 @@
 \addplot[domain=-1:6, samples=2, color=black, dotted, thick]{2-x};
 \addplot[domain=0:6, samples=2, color=black, dotted, thick]{4-x};
 \end{axis}
-\draw[->] (1.4,1.2) -- (2.75,2.35);
+\draw[thick,->] (1.4,1.2) -- (2.75,2.35) node[above right] {$\mathbf{v}$};
 \end{tikzpicture}
-\caption{Grafisk illustration, hvor løsningsmængden er tom til problemet i \ref{eks:min_loes3}.}
+\caption{Grafisk illustration, hvor løsningsmængden er tom til problemet i \ref{eks:min_loes}.}
 %
 \label{fig:opti_loes3}
 \end{figure}
