--- a/fig/tikz/optimering/opti_loes4.tex
+++ b/fig/tikz/optimering/opti_loes4.tex
@@ -22,20 +22,22 @@
 ]
 
 
+
+%%%
+%%%
+\addplot[name path=b, domain={0:3}, color=myblue, style=very thick,samples=2]{6-2*x};
+\addlegendentry{$2x_1+x_2 \geq 6$}
+\addplot[name path=a, domain={0:6}, color=myred, style=very thick, samples=2]{3-0.5*x};
+\addlegendentry{$x_1+2x_2 \geq 6$}
+%%%
+%%%
 \addplot[name path=d, domain=0:6,samples=2,color=white, style=ultra thin]{6};
 \addplot[name path=c, domain=0:3,samples=2,color=black, style=very thin]{0};
-%%%
-%%%
-\addplot[name path=b, domain={0:6}, color=myblue, style=very thick,samples=2]{6-2*x};
-\addlegendentry{$2x_1+x_2 \leq 6$}
-\addplot[name path=a, domain={0:6}, color=myred, style=very thick, samples=2]{3-0.5*x};
-\addlegendentry{$x_1+2x_2 \leq 6$}
 
 
 
-
-\addplot[fill=myblue!15,opacity=0.4] fill between [of=d and b, soft clip={domain=0:2}];
-\addplot[fill=myblue!15,opacity=0.4] fill between [of=d and a, soft clip={domain=2:4}];
+\addplot[fill=myblue!15] fill between [of=d and b, soft clip={domain=0:2}];
+\addplot[fill=myblue!15] fill between [of=d and a, soft clip={domain=2:4}];
  
 
 %
@@ -46,7 +48,7 @@
 \addplot[domain=0:6, samples=2, color=black, dotted, thick]{4-x};
 \addplot[mark=*] coordinates {(2,2)};
 \end{axis}
-\draw[->] (1.4,1.2) -- (2.75,2.35);
+\draw[thick,->] (1.4,1.2) -- (2.75,2.35) node[above right] {$\mathbf{v}$};
 \end{tikzpicture}
 \caption{Grafisk illustration, hvor den optimale løsning er $\infty$ til problemet i \ref{eks:min_loes}.}
 %
